src/tests/render_snapshots/snapshots/sabiql__render_snapshots__er_diagram__mysql_er_table_picker_shows_table_names_without_database.snap
---
source: src/tests/render_snapshots/er_diagram.rs
expression: output
---
test_project ▸ app ▸ -                                                                                                                              connected | mysql
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [Trig] [DDL]                                                                                       
│> users                                │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  posts                                ││(select a table)                                                                                                          │
│  comments                             ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                ╭ ER Diagram ─────────────────────────────────────────────────────────────────────────────────────╮                                │
│                                │  >                                                                                              │                                │
│                                │  Mode:    Invalid                                                                               │                                │
│                                │  Targets: —                                                                                     │                                │
│                                │  Output:  —                                                                                     │                                │
│                                │▸     users                                                                                      │                                │
│                                │      posts                                                                                      │                                │
│                                │      comments                                                                                   │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │────────────────────────────────┘
│                                │                                                                                                 │────────────────────────────────┐
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                ╰ 0/3 selected │ Space: Select │ ⌥A: All │ Enter: Generate │ Esc: Cancel ─────────────────────────╯                                │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Enter:Generate  Space:Select  ⌥A:All  type:Filter  Esc:Close
